# rAthenaItemDBScriptEditor

./: .gitignore  README.md  auto_complete.txt  config.yml  const.yml  db.yml  dialog.glade  editor.rb  item_db_equip_jpn.yml  memo.md  package-lock.json  package.json  rADB.rb  run.bat  script.yml  table_pick_dialog.rb  test_parse.js  ui.glade  vite.config.ts  要件定義.md  追加要件.md
.github/workflows/: release.yml
config/: auto_complete.txt  const.yml  db.yml  script.yml
sample/input/: db.yml  item_combos.yml  item_db_equip.yml  item_db_etc.yml  item_db_etc.yml.bak  item_db_jpname.yml  script.yml  skill_db_jpname.yml
scripts/: build_processor.bat  build_processor.ps1  db_processor.py  db_processor.spec  main.py  package-release.js  pyproject.toml  tag-release.js
src/: App.vue  main.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  fs-all.json
src-tauri/src/: lib.rs  main.rs
src/components/: ComboEditPanel.vue  ComboItemSelectDialog.vue  DivinePrideWindow.vue  InjectButton.vue  ItemEditPanel.vue  ItemSelectDialog.vue  LeftPane.vue  ParamSelectDialog.vue  RightPane.vue  ScriptEditorDialog.vue  SearchPanel.vue  SettingsView.vue
src/composables/: useAppModel.ts
src/lib/: DbProcessor.ts  DbReader.ts  ScriptConfReader.ts  SettingsStore.ts  YamlInjector.ts
